--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -10,5 +10,5 @@
   <%= @department.organization.name %>
 </p>
 
-<%= link_to 'Edit', edit_department_path(@department) %> |
+<%= link_to 'Edit', edit_organization_path(@department) %> |
 <%= link_to 'Back', @department.organization %>
